RESOLVED FIXED99212
Fix GraphicsLayerCA visible rect computation in the face of perspective and preserve-3d
https://bugs.webkit.org/show_bug.cgi?id=99212
Summary Fix GraphicsLayerCA visible rect computation in the face of perspective and p...
Simon Fraser (smfr)
Reported 2012-10-12 14:58:10 PDT
Fix GraphicsLayerCA visible rect computation in the face of perspective and preserve-3d
Attachments
Patch (20.21 KB, patch)
2012-10-12 16:55 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2012-10-12 16:55:27 PDT
Simon Fraser (smfr)
Comment 2 2012-10-12 18:18:14 PDT
Note You need to log in before you can comment on or make changes to this bug.